--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.1.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.1",
     "react": "^18",
