--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.0",
     "framer-motion": "^11.1.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "simplex-noise": "^4.0.1"
+    "simplex-noise": "^4.0.1",
+    "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
     "@types/node": "^20",
